Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             Hi, I'm Yash <span class="wave">👋</span>
           </h1>
           <h2 class="hero-headline">
-            Building digital products, applications, and experiences.
+            Crafting Android, web, and Flutter apps that deliver clean design and real impact.
           </h2>
           <p class="hero-description">
             A Software Engineer specializing in Full Stack Development and Web
@@ -613,3 +613,4 @@
     <script src="js/contact.js"></script>
   </body>
 </html>
+
