--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/hero.css" />
     <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/education.css" />
     <link rel="stylesheet" href="css/services.css" />
     <link rel="stylesheet" href="css/skills.css" />
     <link rel="stylesheet" href="css/portfolio.css" />
@@ -38,6 +39,7 @@
         <nav class="header-nav">
           <a href="#home" class="nav-link active">Home</a>
           <a href="#about" class="nav-link">About</a>
+          <a href="#education" class="nav-link">Education</a>
           <a href="#services" class="nav-link">Services</a>
           <a href="#portfolio" class="nav-link">Portfolio</a>
           <a href="#contact" class="nav-link">Contact</a>
@@ -134,6 +136,39 @@
                 rel="noopener"
                 >Download Resume</a
               >
+            </div>
+          </div>
+        </div>
+      </section>
+
+       <!-- Education Section -->
+      <section class="education full-screen-section" id="education">
+        <div class="container">
+          <div class="section-header">
+            <h2 class="section-title">Education</h2>
+            <p class="section-subtitle">My academic background</p>
+          </div>
+          <div class="education-content">
+            <div class="education-item">
+              <div class="education-image">
+                <img src="sdjic_logo.jpeg" alt="SDJ International College" />
+              </div>
+              <div class="education-details">
+                <h3>Bachelor of Computer Application</h3>
+                <p class="education-institution">SDJ International College</p>
+                <p class="education-status">July 2023 - July 2026</p>
+              </div>
+            </div>
+            <div class="education-item">
+              <div class="education-image">
+                <img src="ashadeep_logo.jpg" alt="Ashadeep Group of Schools" />
+              </div>
+              <div class="education-details">
+                <h3>12th Commerce (GSHEB)</h3>
+                <p class="education-institution">Ashadeep Group of Schools</p>
+                <p class="education-grade">Grade: 88.43</p>
+                <p class="education-year">March 2023</p>
+              </div>
             </div>
           </div>
         </div>
@@ -613,4 +648,5 @@
     <script src="js/contact.js"></script>
   </body>
 </html>
+
 
