--- a/index.html
+++ b/index.html
@@ -634,6 +634,8 @@
     <script src="js/theme.js"></script>
     <script src="js/main.js"></script>
     <script src="js/navigation.js"></script>
+    <script src="js/typing.js"></script>
+
 
     <!-- Email.js for contact form -->
     <script
@@ -648,5 +650,6 @@
     <script src="js/contact.js"></script>
   </body>
 </html>
+
 
 
