--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h1 class="hero-greeting">
             Hi, I'm Yash <span class="wave">👋</span>
           </h1>
-          <h2 class="hero-headline">
+          <h2 class="hero-headline typing-effect">
             Crafting Android, web, and Flutter apps that deliver clean design and real impact.
           </h2>
           <p class="hero-description">
@@ -650,6 +650,7 @@
     <script src="js/contact.js"></script>
   </body>
 </html>
+
 
 
 
